# violentutf-api

./: .architectural-triggers.yml  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .pre-commit-pytest-runner.py  .secrets.baseline  ASYNC_TASK_IMPLEMENTATION.md  Architectural-Compliance-Validation-Report.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE_ISSUE_53.md  IMPLEMENTATION_SUMMARY_ISSUE_53.md  ISSUE_70_COMPLETION_STATUS.md  ISSUE_70_DETAILED_TODO_CACHE.md  ISSUE_89_COMPREHENSIVE_ANALYSIS.md  ISSUE_89_EXHAUSTIVE_TODO_PLAN.md  ISSUE_89_FINAL_COMPLETION_REPORT.md  ISSUE_89_FINAL_SUCCESS_REPORT.md  Issue-89-Completion-Report.md  Issue-89-Exhaustive-Todo-Cache.json  Issue-89-Implementation-Progress.md  Issue-89-REAL-Exhaustive-Todo-Cache.json  Issue_89_Final_Status_Update.md  Makefile  PRE_COMMIT_SETUP.md  PR_READINESS_REPORT.md  README.md  SECURITY.md  SETUP_GUIDE.md  TEST_FIX_SUMMARY.md  TEST_PATTERN_FIXES.md  TEST_REFACTORING_SUMMARY.md  UAT-Performance-Validation-Report.md  (+71 more)
.allstar/: admin.yaml  binary_artifacts.yaml  branch_protection.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 02-story.yml  06-performance.yml  08-refactor.yml  README.md  bug.yml  chore.yml  config.yml  documentation.yml  epic.yml  research.yml  security.yml  task.yml
.github/scripts/: analyze-bandit-report.py  analyze-safety-report.py  audit-organization-repos.py  ban-test-masking.py  test-workflow-execution.py  validate-workflow-layers.py
.github/workflows/: architectural-compliance.yml  architectural-tests.yml  ci.yml  claude-code-architectural-audit.yml  pr-validation.yml  release.yml  security-ci-validation.yml  security.yml
alembic/: env.py
alembic/versions/: 0d9d1d5fbe10_initial_database_models_with_.py  41eb10f48a60_add_last_login_at_and_last_login_ip_.py  add_async_task_management_models.py  add_roles_field_rbac.py  add_vulnerability_management_tables.py
app/: __init__.py  main.py
app/api/: base.py  deps.py  routes.py
app/celery/: __init__.py  celery.py  tasks.py
app/core/: abac.py  abac_permissions.py  audit.py  auth.py  auth_failover.py  auth_utils.py  authority.py  cache.py  circuit_breaker.py  config.py  container.py  context.py  enums.py  error_dictionary.py  errors.py  external_services.py  field_sanitization.py  input_validation.py  logging.py  permissions.py  rate_limiting.py  request_signing.py  safe_logging.py  secrets_manager.py  security.py  service_registry.py  session.py  sql_injection_prevention.py  startup.py
app/db/: base.py  base_class.py  init_mfa_policies.py  session.py  types.py
app/dependencies/: auth.py  middleware.py  sanitization.py
app/middleware/: __init__.py  audit.py  authentication.py  body_cache.py  csrf.py  idempotency.py  input_sanitization.py  logging.py  metrics.py  oauth.py  permissions.py  rate_limiting.py  request_id.py  request_signing.py  request_size.py  response_cache.py  security.py  session.py
app/models/: __init__.py  api_key.py  audit_log.py  evidence_document.py  mfa.py  mixins.py  oauth.py  orchestrator.py  permission.py  plugin.py  report.py  role.py  scan.py  security_scan.py  session.py  task.py  user.py  user_role.py  vulnerability_finding.py  vulnerability_taxonomy.py
app/repositories/: __init__.py  api_key.py  audit_log.py  audit_log_extensions.py  audit_log_impl.py  base.py  enhanced.py  health.py  mfa_backup_code.py  mfa_challenge.py  mfa_device.py  mfa_event.py  mfa_policy.py  oauth_access_token.py  oauth_application.py  oauth_authorization_code.py  oauth_refresh_token.py  oauth_scope.py  plugin.py  report.py  role.py  scan.py  security_scan.py  session.py  task.py  template.py  user.py  vulnerability_finding.py  vulnerability_taxonomy.py
app/schemas/: __init__.py  api_key.py  audit_log.py  base.py  common.py  filtering.py  mfa.py  mfa_policy.py  oauth.py  report.py  scan.py  security_scan.py  session.py  task.py  user.py  vulnerability_finding.py  vulnerability_taxonomy.py
app/services/: __init__.py  abac_service_impl.py  api_key_service.py  api_key_service_simple.py  architectural_metrics_service.py  architectural_report_generator.py  audit_service.py  auth_service.py  authentication_service.py  cache_service_impl.py  dependency_service.py  health_service.py  mfa_policy_service.py  mfa_service.py  middleware_service.py  oauth_service.py  plugin_service.py  (+13 more)
config/: ci_violation_patterns.yml  violation_patterns.yml
docs/: ARCHITECTURAL_METRICS_FEATURE.md  CI_CD_MULTI_LAYER_TESTING.md  ISSUE_53_IMPLEMENTATION.md  README.md  database_models_implementation.md  issue17-comprehensive-test-analysis.md  issue17-deep-analysis-critical-findings.md  issue17-implementation-summary.md  issue87_comprehensive_todo_cache.md  sqlalchemy_2_migration_summary.md
examples/: repository_pattern_refactoring_sample.py.disabled
reports/: ISSUE_45_RESULTS.md  adr_audit_report_20250805_174252.html  adr_audit_report_20250805_174252.json
scripts/: generate_pr_summary.py  health_check.py  run_docker_tests.sh  run_tests_windows.py  security-scan.sh  setup-security.sh  wait-for-it.sh
test_reports/: adr_audit_report_20250805_141024.json  adr_audit_report_20250805_141054.json  adr_audit_report_20250805_141236.json  adr_audit_report_20250805_141328.json  adr_audit_report_20250805_141347.json  adr_audit_report_20250805_141416.json  adr_audit_report_20250805_141802.html  adr_audit_report_20250805_141802.json  adr_audit_report_20250805_172925.json  adr_audit_report_20250805_173010.json  adr_audit_report_20250805_173104.json  adr_audit_report_20250805_173105.html  adr_audit_report_20250805_182328.html  adr_audit_report_20250805_182328.json  sample_audit_data.json
tests/: __init__.py  conftest.py  conftest_integration_stable.py  setup_test_env.py  test_architectural_metrics.py  test_database.py  test_database_fixed.py  test_fixtures.py  test_issue_53.py  test_issue_68.py  test_issue_69.py  test_ui_components_comprehensive.py
tools/: __init__.py
violentutf_api/: __init__.py  main.py
(+599 files in other folders)
